--- a/index.html
+++ b/index.html
@@ -10,60 +10,160 @@
 </head>
 
 <body>
-  <svg width="367" height="64" viewBox="0 0 367 64" fill="none" xmlns="http://www.w3.org/2000/svg">
-    <g filter="url(#easter-egg-modal-bg-filter0_d)">
-      <path
-        d="M97.5 22.1959C81 22.1959 76.5 45.7061 64.5 45.7061C55.7962 45.7061 52 33.6898 36.5 33.6898C29.1529 33.6898 21.0072 38.58 15.3124 42.8329C12.4666 44.9582 8 42.9784 8 39.4267V10C8 7.79086 9.79086 6 12 6H354.5C356.709 6 358.5 7.79086 358.5 10V39.5146C358.5 40.3534 358.242 41.1654 357.702 41.8067C355.106 44.8853 346.298 54 333 54C317 54 309.5 22.1959 294.228 22.1959C278.956 22.1959 273 40.8047 257 40.8047C241 40.8047 232.996 19.0612 221.5 19.0612C210.004 19.0612 207.496 34.1091 196 33.6898C184.504 33.2705 182 26.898 168.5 26.898C155 26.898 146.5 40.8047 134.5 40.8047C122.5 40.8047 114 22.1959 97.5 22.1959Z"
-        fill="white" />
-    </g>
-    <path d="M65.2539 19.999L61.1933 27.4496" stroke="#FFD02B" stroke-width="2" stroke-linecap="round"
-      stroke-linejoin="round" />
-    <path d="M192.504 18.8965L185.501 14.1042" stroke="#F38D00" stroke-width="2" stroke-linecap="round"
-      stroke-linejoin="round" />
-    <circle cx="256.502" cy="20" r="2" fill="#0097D8" />
-    <circle cx="135.5" cy="16.999" r="2" fill="#3FBFAD" />
-    <circle cx="25.5" cy="20.999" r="2" fill="#0097D8" />
-    <defs>
-      <filter id="easter-egg-modal-bg-filter0_d" x="0" y="0" width="366.5" height="64" filterUnits="userSpaceOnUse"
-        color-interpolation-filters="sRGB">
-        <feFlood flood-opacity="0" result="BackgroundImageFix" />
-        <feColorMatrix in="SourceAlpha" type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 0" />
-        <feOffset dy="2" />
-        <feGaussianBlur stdDeviation="4" />
-        <feColorMatrix type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.08 0" />
-        <feBlend mode="normal" in2="BackgroundImageFix" result="effect1_dropShadow" />
-        <feBlend mode="normal" in="SourceGraphic" in2="effect1_dropShadow" result="shape" />
-      </filter>
-    </defs>
-  </svg>
-  <svg width="320" height="59" viewBox="0 0 320 59" fill="none" xmlns="http://www.w3.org/2000/svg">
-    <g filter="url(#easter-egg-modal-bg-mobile-filter0_d)">
-      <path
-        d="M57.0013 22.1959C40.5013 22.1959 36.0013 45.7061 24.0013 45.7061C16.3189 45.7061 12.4599 36.3445 1.00134 34.1474C1.0033 28.5199 0.999385 19.6641 1.00008 9.00086C1.00019 7.34418 2.34326 6 3.99993 6H316C317.657 6 319 7.34315 319 9V36.5927C319 37.19 318.869 37.7782 318.565 38.2925C317.03 40.8929 311.335 49 300 49C282 49 275 22.1959 255 22.1959C239.728 22.1959 232.501 40.8047 216.501 40.8047C200.501 40.8047 192.497 19.0612 181.001 19.0612C169.506 19.0612 166.997 34.1091 155.501 33.6898C144.006 33.2705 141.501 26.898 128.001 26.898C114.501 26.898 106.001 40.8047 94.0013 40.8047C82.0013 40.8047 73.5013 22.1959 57.0013 22.1959Z"
-        fill="white" />
-    </g>
-    <path d="M25.2539 20L21.1933 27.4506" stroke="#FFD02B" stroke-width="2" stroke-linecap="round"
-      stroke-linejoin="round" />
-    <path d="M152.504 18.8965L145.501 14.1042" stroke="#F38D00" stroke-width="2" stroke-linecap="round"
-      stroke-linejoin="round" />
-    <circle cx="216.504" cy="20" r="2" fill="#0097D8" />
-    <circle cx="95.5" cy="17" r="2" fill="#3FBFAD" />
-    <defs>
-      <filter id="easter-egg-modal-bg-mobile-filter0_d" x="-7" y="0" width="334" height="59"
-        filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
-        <feFlood flood-opacity="0" result="BackgroundImageFix" />
-        <feColorMatrix in="SourceAlpha" type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 0" />
-        <feOffset dy="2" />
-        <feGaussianBlur stdDeviation="4" />
-        <feColorMatrix type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.08 0" />
-        <feBlend mode="normal" in2="BackgroundImageFix" result="effect1_dropShadow" />
-        <feBlend mode="normal" in="SourceGraphic" in2="effect1_dropShadow" result="shape" />
-      </filter>
-    </defs>
-  </svg>
+  <div class="visually-hidden">
+    <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+      <symbol id="double-tick" viewBox="0 0 20 20">
+        <rect width="20" height="20" fill="none" />
+        <path d="M2.38196 8.48066L7.20182 13.3006L14.4317 6.07074" fill="none" stroke="#0070BA" stroke-width="1.5" />
+        <path d="M10.5666 13.9293L17.618 6.87787" fill="none" stroke="#0070BA" stroke-width="1.5" />
+      </symbol>
+      <symbol id="arrow-down" viewBox="0 0 15 15">
+        <path d="M12 6L7.5 10L3 6" stroke="currentColor" stroke-width="2" stroke-linejoin="round" fill="transparent" />
+      </symbol>
+    </svg>
+  </div>
+  <div class="svg-wrp">
+    <svg width="367" height="64" viewBox="0 0 367 64" fill="none" xmlns="http://www.w3.org/2000/svg">
+      <g filter="url(#easter-egg-modal-bg-filter0_d)">
+        <path
+          d="M97.5 22.1959C81 22.1959 76.5 45.7061 64.5 45.7061C55.7962 45.7061 52 33.6898 36.5 33.6898C29.1529 33.6898 21.0072 38.58 15.3124 42.8329C12.4666 44.9582 8 42.9784 8 39.4267V10C8 7.79086 9.79086 6 12 6H354.5C356.709 6 358.5 7.79086 358.5 10V39.5146C358.5 40.3534 358.242 41.1654 357.702 41.8067C355.106 44.8853 346.298 54 333 54C317 54 309.5 22.1959 294.228 22.1959C278.956 22.1959 273 40.8047 257 40.8047C241 40.8047 232.996 19.0612 221.5 19.0612C210.004 19.0612 207.496 34.1091 196 33.6898C184.504 33.2705 182 26.898 168.5 26.898C155 26.898 146.5 40.8047 134.5 40.8047C122.5 40.8047 114 22.1959 97.5 22.1959Z"
+          fill="white" />
+      </g>
+      <path d="M65.2539 19.999L61.1933 27.4496" stroke="#FFD02B" stroke-width="2" stroke-linecap="round"
+        stroke-linejoin="round" />
+      <path d="M192.504 18.8965L185.501 14.1042" stroke="#F38D00" stroke-width="2" stroke-linecap="round"
+        stroke-linejoin="round" />
+      <circle cx="256.502" cy="20" r="2" fill="#0097D8" />
+      <circle cx="135.5" cy="16.999" r="2" fill="#3FBFAD" />
+      <circle cx="25.5" cy="20.999" r="2" fill="#0097D8" />
+      <defs>
+        <filter id="easter-egg-modal-bg-filter0_d" x="0" y="0" width="366.5" height="64" filterUnits="userSpaceOnUse"
+          color-interpolation-filters="sRGB">
+          <feFlood flood-opacity="0" result="BackgroundImageFix" />
+          <feColorMatrix in="SourceAlpha" type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 0" />
+          <feOffset dy="2" />
+          <feGaussianBlur stdDeviation="4" />
+          <feColorMatrix type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.08 0" />
+          <feBlend mode="normal" in2="BackgroundImageFix" result="effect1_dropShadow" />
+          <feBlend mode="normal" in="SourceGraphic" in2="effect1_dropShadow" result="shape" />
+        </filter>
+      </defs>
+    </svg>
+    <svg width="320" height="59" viewBox="0 0 320 59" fill="none" xmlns="http://www.w3.org/2000/svg">
+      <g filter="url(#easter-egg-modal-bg-mobile-filter0_d)">
+        <path
+          d="M57.0013 22.1959C40.5013 22.1959 36.0013 45.7061 24.0013 45.7061C16.3189 45.7061 12.4599 36.3445 1.00134 34.1474C1.0033 28.5199 0.999385 19.6641 1.00008 9.00086C1.00019 7.34418 2.34326 6 3.99993 6H316C317.657 6 319 7.34315 319 9V36.5927C319 37.19 318.869 37.7782 318.565 38.2925C317.03 40.8929 311.335 49 300 49C282 49 275 22.1959 255 22.1959C239.728 22.1959 232.501 40.8047 216.501 40.8047C200.501 40.8047 192.497 19.0612 181.001 19.0612C169.506 19.0612 166.997 34.1091 155.501 33.6898C144.006 33.2705 141.501 26.898 128.001 26.898C114.501 26.898 106.001 40.8047 94.0013 40.8047C82.0013 40.8047 73.5013 22.1959 57.0013 22.1959Z"
+          fill="white" />
+      </g>
+      <path d="M25.2539 20L21.1933 27.4506" stroke="#FFD02B" stroke-width="2" stroke-linecap="round"
+        stroke-linejoin="round" />
+      <path d="M152.504 18.8965L145.501 14.1042" stroke="#F38D00" stroke-width="2" stroke-linecap="round"
+        stroke-linejoin="round" />
+      <circle cx="216.504" cy="20" r="2" fill="#0097D8" />
+      <circle cx="95.5" cy="17" r="2" fill="#3FBFAD" />
+      <defs>
+        <filter id="easter-egg-modal-bg-mobile-filter0_d" x="-7" y="0" width="334" height="59"
+          filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
+          <feFlood flood-opacity="0" result="BackgroundImageFix" />
+          <feColorMatrix in="SourceAlpha" type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 0" />
+          <feOffset dy="2" />
+          <feGaussianBlur stdDeviation="4" />
+          <feColorMatrix type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.08 0" />
+          <feBlend mode="normal" in2="BackgroundImageFix" result="effect1_dropShadow" />
+          <feBlend mode="normal" in="SourceGraphic" in2="effect1_dropShadow" result="shape" />
+        </filter>
+      </defs>
+    </svg>
+  </div>
   <div class="wrp wrp-1"></div>
   <div class="wrp wrp-2"></div>
-
+  <div class="accordion">
+    <h2>Аккордеон</h2>
+    <div class="modal-tape-edit__interests-group-title-wrap accordion__btn" tabindex="0">
+      <input class="visually-hidden" type="checkbox" id="interests-evolution" name="evolution" />
+      <label class="modal-tape-edit__interests-group-title base-hover" for="interests-evolution">Развитие<span
+          class="modal-tape-edit__interests-group-title-icon accordion-no-click"></span></label>
+      <svg class="modal-tape-edit__interests-acord-icon accordion__btn-icon" width="15" height="15" aria-hidden="true">
+        <use xlink:href="#arrow-down"></use>
+      </svg>
+    </div>
+    <div class="modal-tape-edit__interests-group-inner accordion__content">
+      <input class="visually-hidden" type="checkbox" id="interests-career" name="career" />
+      <label class="modal-tape-edit__interests-item base-hover" for="interests-career">Карьера
+        <svg class="modal-tape-edit__interests-item-icon" width="20" height="20" aria-hidden="true">
+          <use xlink:href="#double-tick"></use>
+        </svg>
+      </label>
+      <input class="visually-hidden" type="checkbox" id="interests-training" name="training" />
+      <label class="modal-tape-edit__interests-item base-hover" for="interests-training">Обучение
+        <svg class="modal-tape-edit__interests-item-icon" width="20" height="20" aria-hidden="true">
+          <use xlink:href="#double-tick"></use>
+        </svg>
+      </label>
+      <input class="visually-hidden" type="checkbox" id="interests-creativity" name="creativity" />
+      <label class="modal-tape-edit__interests-item base-hover" for="interests-creativity">Креативность
+        <svg class="modal-tape-edit__interests-item-icon" width="20" height="20" aria-hidden="true">
+          <use xlink:href="#double-tick"></use>
+        </svg>
+      </label>
+      <input class="visually-hidden" type="checkbox" id="interests-best-practise" name="best-practise" />
+      <label class="modal-tape-edit__interests-item base-hover" for="interests-best-practise">Лучшие практики
+        <svg class="modal-tape-edit__interests-item-icon" width="20" height="20" aria-hidden="true">
+          <use xlink:href="#double-tick"></use>
+        </svg>
+      </label>
+      <input class="visually-hidden" type="checkbox" id="interests-professionality" name="professionality" />
+      <label class="modal-tape-edit__interests-item base-hover" for="interests-professionality">Профмастерство
+        <svg class="modal-tape-edit__interests-item-icon" width="20" height="20" aria-hidden="true">
+          <use xlink:href="#double-tick"></use>
+        </svg>
+      </label>
+    </div>
+  </div>
+  <div class="accordion">
+    <h2>Аккордеон</h2>
+    <div class="modal-tape-edit__interests-group-title- no-outline accordion__btn" tabindex="0">
+      <input class="visually-hidden" type="checkbox" id="interests-evolution" name="evolution" />
+      <label class="modal-tape-edit__interests-group-title base-hover" for="interests-evolution">Развитие<span
+          class="modal-tape-edit__interests-group-title-icon accordion-no-click"></span></label>
+      <svg class="modal-tape-edit__interests-acord-icon accordion__btn-icon" width="15" height="15" aria-hidden="true">
+        <use xlink:href="#arrow-down"></use>
+      </svg>
+    </div>
+    <div class="modal-tape-edit__interests-group-inner accordion__content">
+      <input class="visually-hidden" type="checkbox" id="interests-career" name="career" />
+      <label class="modal-tape-edit__interests-item base-hover" for="interests-career">Карьера
+        <svg class="modal-tape-edit__interests-item-icon" width="20" height="20" aria-hidden="true">
+          <use xlink:href="#double-tick"></use>
+        </svg>
+      </label>
+      <input class="visually-hidden" type="checkbox" id="interests-training" name="training" />
+      <label class="modal-tape-edit__interests-item base-hover" for="interests-training">Обучение
+        <svg class="modal-tape-edit__interests-item-icon" width="20" height="20" aria-hidden="true">
+          <use xlink:href="#double-tick"></use>
+        </svg>
+      </label>
+      <input class="visually-hidden" type="checkbox" id="interests-creativity" name="creativity" />
+      <label class="modal-tape-edit__interests-item base-hover" for="interests-creativity">Креативность
+        <svg class="modal-tape-edit__interests-item-icon" width="20" height="20" aria-hidden="true">
+          <use xlink:href="#double-tick"></use>
+        </svg>
+      </label>
+      <input class="visually-hidden" type="checkbox" id="interests-best-practise" name="best-practise" />
+      <label class="modal-tape-edit__interests-item base-hover" for="interests-best-practise">Лучшие практики
+        <svg class="modal-tape-edit__interests-item-icon" width="20" height="20" aria-hidden="true">
+          <use xlink:href="#double-tick"></use>
+        </svg>
+      </label>
+      <input class="visually-hidden" type="checkbox" id="interests-professionality" name="professionality" />
+      <label class="modal-tape-edit__interests-item base-hover" for="interests-professionality">Профмастерство
+        <svg class="modal-tape-edit__interests-item-icon" width="20" height="20" aria-hidden="true">
+          <use xlink:href="#double-tick"></use>
+        </svg>
+      </label>
+    </div>
+  </div>
+  <script src="./js/init-accordion.js"></script>
 </body>
 
 </html>
