Добавляет outline: none

--- a/index.html
+++ b/index.html
@@ -163,6 +163,7 @@
       </label>
     </div>
   </div>
+  <button class="btn" type="button">Кнопка</button>
   <script src="./js/init-accordion.js"></script>
 </body>
 
