--- a/page-1.html
+++ b/page-1.html
@@ -12,8 +12,8 @@
 <body>
   <header class="header header--main">
     <div class="header__wrapper container">
-      <div class="header__line"><a class="header__logo"><svg width="188" height="33" viewBox="0 0 188 33" fill="none"
-            xmlns="http://www.w3.org/2000/svg">
+      <div class="header__line"><a class="header__logo" href="index.html"><svg width="188" height="33"
+            viewBox="0 0 188 33" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path class="logo-svg-part-2"
               d="M17.3969 16.456L15.6211 24.5048L16.642 24.7346L18.4178 16.6858L17.3969 16.456Z" fill="white" />
             <path class="logo-svg-part-2"
@@ -210,8 +210,6 @@
       </nav>
     </div>
   </header>
-  <a href="page-1.html">Ссылка 1</a>
-  <a href="page-2.html">Ссылка 2</a>
   <script>
     const body = document.querySelector('body');
 
