--- a/page-2.html
+++ b/page-2.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-  <header class="header header--main">
+  <header class="header header--test">
     <div class="header__wrapper container">
       <div class="header__line"><a class="header__logo"><svg width="188" height="33" viewBox="0 0 188 33" fill="none"
             xmlns="http://www.w3.org/2000/svg">
@@ -210,8 +210,6 @@
       </nav>
     </div>
   </header>
-  <a href="page-1.html">Ссылка 1</a>
-  <a href="page-2.html">Ссылка 2</a>
   <script>
     const body = document.querySelector('body');
 
